# mini-mattilda

./: .gitignore  README.md  docker-compose.yml
api/: pyproject.toml
backend/: Dockerfile  makefile  pyproject.toml
backend/app/: db.py  main.py  models.py
backend/app/db/: cache.py  db.py
backend/app/resources/: errors.py
backend/app/resources/inscriptions/: controller.py  service.py
backend/app/resources/invoices/: controller.py  service.py
backend/app/resources/schools/: controller.py  models.py  service.py
backend/app/resources/students/: controller.py  models.py  service.py
backend/app/rest/: app.py  deps.py  main.py  router.py
backend/app/tests/: conftest.py  rest_test.py
backend/app/tests/rest/: inscriptions_rest_test.py  invoices_rest_test.py
backend/tests/: conftest.py
backend/tests/rest/: invoices_rest_test.py  root_rest_test.py  schools_rest_test.py  students_rest_test.py
frontend/: Dockerfile
