[tool.poetry]
name = "app"
version = "0.1.0"
description = "mini-mattilda backend"
authors = ["DevCharles <charlesipn@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.6.4"}
pendulum = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
